; setuptools
[metadata]
name = zart.djsite
version = 0.0.0

[options]
namespace_packages = zart
packages = find:
package_dir =
    = src
install_requires =
    setuptools
    django

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    djsite = zart.djsite.manage:main

[bdist_wheel]
universal = 1
