; setuptools
[metadata]
name = zart.djsite
version = 0.0.0

[options]
namespace_packages = zart
packages = find:
package_dir =
    = src
install_requires =
    setuptools
    django
    wfastcgi

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    djsite = zart.djsite.manage:main

[bdist_wheel]
universal = 1

[tox:tox]
isolated_build = true

[testenv]
usedevelop = true
passenv =
    windir
setenv =
    PIP_DISABLE_PIP_VERSION_CHECK = 1
    PIP_NO_PYTHON_VERSION_WARNING = 1
    PYTHONDONTWRITEBYTECODE = 1
    PYTHONWARNINGS = {env:PYTHONWARNINGS:default}
    ANSICON = {env:COLORTERM:}

commands = []
